--- a/esp_video/examples/simple_video_server/main/CMakeLists.txt
+++ b/esp_video/examples/simple_video_server/main/CMakeLists.txt
@@ -1,4 +1,7 @@
-set(srcs "simple_video_server_example.c")
+set(srcs "simple_video_server_example.c"
+         "shell.c"
+         "shell/camera_shell.c"
+         "shell/simple_shell.c")
 set(html_files "../frontend/gzipped/index.html.gz"
                "../frontend/gzipped/loading.jpg.gz"
                "../frontend/gzipped/favicon.ico.gz"
@@ -6,5 +9,5 @@ set(html_files "../frontend/gzipped/index.html.gz"
                "../frontend/gzipped/assets/index.css.gz")
 
 idf_component_register(SRCS "${srcs}"
-                       PRIV_INCLUDE_DIRS .
+                       PRIV_INCLUDE_DIRS . shell
                        EMBED_TXTFILES ${html_files})
