IMX708 tuning + VCM focus (DW907) + indoor/outdoor profiles + app/ISP/IPA updates
- Add VCM focus driver (DW907).
- IMX708 tuning: faster AWB convergence, wider AWB ranges, low‑light anti‑green CCM, slightly higher AE target.
- Two IPA JSON profiles: indoor (low‑light biased) and outdoor (stable/high‑light).
- AF parameters: center‑weighted windows, edge/definition thresholds, luminance guards, coarse/fine scan points, calibrated min/max positions, timeouts.
- App/pipeline: profile selection, early param apply at startup, extra AE/AWB/AF logging.
- ISP/IPA: update ordering and initial stats handling; integrate JSON profiles.
- Kconfig/menu: options for sensor/VCM and JSON selection.

--- a/esp_cam_sensor/CMakeLists.txt
+++ b/esp_cam_sensor/CMakeLists.txt
@@ -110,6 +110,11 @@ if(CONFIG_CAM_MOTOR_DW9714)
     list(APPEND priv_include_dirs "motors/dw9714/private_include")
 endif()
 
+if(CONFIG_CAM_MOTOR_DW9807)
+    list(APPEND srcs "motors/dw9807/dw9807.c")
+    list(APPEND include_dirs "motors/dw9807/include")
+endif()
+
 if(CONFIG_CAMERA_IMX708)
   list(APPEND srcs "sensors/imx708/imx708.c")
   list(APPEND include_dirs "sensors/imx708/include")
@@ -186,6 +191,10 @@ endif()
 
 if(CONFIG_CAM_MOTOR_DW9714_AUTO_DETECT)
     target_link_libraries(${COMPONENT_LIB} INTERFACE "-u dw9714_detect")
+endif()
+
+if(CONFIG_CAM_MOTOR_DW9807_AUTO_DETECT)
+    target_link_libraries(${COMPONENT_LIB} INTERFACE "-u dw9807_detect")
 endif()
 
 if(CONFIG_CAMERA_IMX708_AUTO_DETECT_MIPI_INTERFACE_SENSOR)
