ISP: Gate IMX708-only control queries and add telemetry toggle
- Guard EXPOSURE/ANALOGUE/DIGITAL gain queries and exposure-step sanitization behind CONFIG_CAMERA_IMX708 to avoid unsupported ctrl errors on other sensors.
- Add Kconfig option ESP_VIDEO_ENABLE_CAMERA_TELEMETRY (default n) to enable compact “[META]” telemetry logging; when disabled, no extra IOCTL reads or logs.
- Reduces pipeline overhead and log noise on non‑IMX708 setups; preserves existing behavior for IMX708 when enabled.

--- a/esp_video/Kconfig
+++ b/esp_video/Kconfig
@@ -269,6 +269,17 @@ menu "Espressif Video Configuration"
                     - Compatible autofocus motor hardware
                     - AF algorithm enabled in IPA configuration
         endif
+
+        config ESP_VIDEO_ENABLE_CAMERA_TELEMETRY
+            bool "Enable compact camera telemetry logs"
+            default n
+            help
+                Enable periodic compact telemetry logs from the ISP pipeline with
+                applied exposure time, gains and key metadata for tuning.
+
+                Disabling reduces logging overhead and avoids extra control reads
+                from the camera driver on platforms/sensors that do not implement
+                those controls.
     endif
 
     config ESP_VIDEO_ENABLE_CAMERA_MOTOR_CONTROLLER
